# Nmap Changelog ($Id$); -*-text-*-

o [NPING] Nping now prints out an error and exists when the user tries to use
  the -p flag for a scan option where that is meaningless. [Sean Rivera] 

o [NSE] Added smb-print-text script which prints specified text using SMB 
  shared printer. [Aleksandar Nikolic]

o [NSE] Added mrinfo script whiches queries a target router for multicast
  information. [Hani Benhabiles]

o [NSE] Added ssl-date script which gets server's time from SSL ServerHello
  reply server random part. [Aleksandar Nikolic]

o [NSE] Added smb-vuln-ms10-61 script which checks the target system for MS10-061
  vulenrability in spoolss service in a safe way. [Aleksandar Nikolic]

o [NSE] Added spoolss functions and constrants to msrpc.lua. [Aleksandar Nikolic]

o [NSE] Reduced the number of names tried by http-vhosts by default.
  [Vlatko Kosturjak]

o Linux unreachable routes are now properly ignored. [David Fifield]

o [NSE] Added smb-vuln-ms10-054 script which check the target system for MS10-054
  vulnerability in SMB. [Aleksandar] 

o [NSE] Added rdp library and the script rdp-enum-encryption that enumerates
  both the Security Layer and Encryption level of the RDP service. [Patrik
  Karlsson]

o [NSE] Added flume-master-info by John Bond. This script gets info
  from Apache Flume, which is a log collection service.

o Fixed a bug that prevented Nmap from finding any interfaces when any
  interface had the type ARPHRD_VOID; this was the case for OpenVZ
  venet interfaces. [Djalal Harouni, David Fifield]

o [Zenmap] Fixed a crash when using the en_NG locale: "ValueError:
  unknown locale: en_NG" [David Fifield]

o [NSE] Added http-get by Alex Weber. This script looks for a .git
  repository directory accesible over HTTP and extracts useful
  information from it.

o [NSE] Fixed some bugs in snmp-interfaces which prevented the script from
  outputting discovered interface info and caused it to abort in the
  pre-scanning phase. [jah]
